fix(forms): align forms 'start' and 'center'

--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -39,6 +39,16 @@
     overflow-y: auto;
 }
 
+
+.full-screen-embedded {
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 .desktop {
     display: flex !important;
 }
@@ -1301,6 +1311,9 @@ label {
         text-align: left;
         padding-right: 0;
     }
+    .full-screen-embedded {
+        align-items: flex-start;
+    }
 }
 
 /*--------------------------------------------------------------
@@ -1739,13 +1752,5 @@ label {
 
 .full-width {
     width: 100%;
-}
-
-.full-screen-embedded {
-    min-height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
 }
 
